test/should-fail/vsgc638.f3
/*
 * @test/compile-error
 *
 */

function foo (localSeq:Integer[]) {
    localSeq[0] = 4; 
}

var seq:Integer[] = [1, 2, 3];
foo (seq);
